Ensure codeblocks have same height when scrollbar appears

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -940,6 +940,7 @@ figure.codeblock.wide {
 .codeblock pre {
   margin: 0;
   padding: calc(var(--base) / 2);
+  padding-bottom: 0;
   overflow: auto;
   scrollbar-width: thin;
 }
